# noudar-core

./: .gitignore  .gitmodules  CMakeLists.txt  License.md  Makefile  Makefile.DOS  Makefile.editor  README.md  mkdocs.yml  update-coverage.sh
Tests/: TestCCharacter.cpp  TestCGame.cpp  TestVec2i.cpp
XcodeProject/Noudar Core/Noudar Core/: main.cpp
XcodeProject/Noudar Core/Noudar Core.xcodeproj/: project.pbxproj
XcodeProject/Noudar Core/Noudar Core.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
XcodeProject/Noudar Core/Noudar Core.xcodeproj/project.xcworkspace/xcuserdata/monty.xcuserdatad/: UserInterfaceState.xcuserstate
XcodeProject/Noudar Core/Noudar Core.xcodeproj/xcuserdata/monty.xcuserdatad/xcschemes/: Noudar Core.xcscheme  xcschememanagement.plist
docs/: bell-tower.md  cemetery.md  characters.md  church.md  citadel.md  crossbow.md  demon.md  evil-spirit.md  fallen-heroes.md  index.md  items.md  levels.md  locations.md  master-demon.md  mausoleum.md  monastery.md  monks.md  nest.md  patium.md  prison.md  shield.md  statue.md  sword.md  tokens-of-faith.md  tower.md  vitrals.md  warthog.md
editor-clion/: CMakeLists.txt
editor-core/include/: CEditor.h
editor-core/src/: CEditor.cpp
editor-core/src/commands/: CLoadNewLevelCommand.cpp  CTurnActorCommand.cpp  IGameCommand.cpp
include/: CActor.h  CBaphomet.h  CBullKnight.h  CConsoleRenderer.h  CCuco.h  CDemon.h  CFalconKnight.h  CGame.h  CMap.h  CMoura.h  CTurtleKnight.h  IRenderer.h  Vec2i.h
ncurses-editor/: CConsoleRenderer.cpp  CConsoleRenderer.h  main.cpp
ncurses-version/: BIOSConsoleRenderer.cpp  CConsoleRenderer.cpp  CConsoleRenderer.h  TrivialConsoleRenderer.cpp  main.cpp
noudar-core/include/: CActor.h  CCharacter.h  CCharacterArchetype.h  CDoorway.h  CElixirFountain.h  CGame.h  CGameDelegate.h  CHuntApproach.h  CItem.h  CKnight.h  CMap.h  CMonster.h  CMonsterGenerator.h  CPlainFileLoader.h  CRandomWorldGenerator.h  CStorageItem.h  CTeam.h  Common.h  IFileLoaderDelegate.h  IMapElement.h  IRenderer.h  Vec2i.h
noudar-core/include/commands/: CActorMeleeAttackCommand.h  CCycleNextItemCommand.h  CCyclePreviousItemCommand.h  CDropItemCommand.h  CEndTurnCommand.h  CHitscanAttackCommand.h  CLoadNewLevelCommand.h  CMoveActorCommand.h  CNullCommand.h  CPickItemCommand.h  CQuitCommand.h  CSuggestItemCommand.h  CTurnActorCommand.h  CUseCurrentItemCommand.h  IGameCommand.h
noudar-core/src/: CActor.cpp  CBullKnight.cpp  CCharacter.cpp  CCharacterArchetype.cpp  CCuco.cpp  CDoorway.cpp  CElixirFountain.cpp  CFalconKnight.cpp  CGame.cpp  CGameDelegate.cpp  CHuntApproach.cpp  CItem.cpp  CKnight.cpp  CMap.cpp  CMonster.cpp  CMonsterGenerator.cpp  CPlainFileLoader.cpp  CRandomWorldGenerator.cpp  CStorageItem.cpp  CTeam.cpp  CTurtleKnight.cpp  Common.cpp  IFileLoaderDelegate.cpp  IMapElement.cpp  Vec2i.cpp
noudar-core/src/commands/: CActorMeleeAttackCommand.cpp  CCycleNextItemCommand.cpp  CCyclePreviousItemCommand.cpp  CDropItemCommand.cpp  CEndTurnCommand.cpp  CHitscanAttackCommand.cpp  CLoadNewLevelCommand.cpp  CMoveActorCommand.cpp  CNullCommand.cpp  CPickItemCommand.cpp  CQuitCommand.cpp  CSuggestItemCommand.cpp  CTurnActorCommand.cpp  CUseCurrentItemCommand.cpp  IGameCommand.cpp
res/: map0.txt  map1.txt  map2.txt  map3.txt  map4.txt  map5.txt  map6.txt  map_tiles0.txt
src/: CActor.cpp  CBullKnight.cpp  CConsoleRenderer.cpp  CCuco.cpp  CFalconKnight.cpp  CGame.cpp  CMap.cpp  CTurtleKnight.cpp  main.cpp
